new item in sidebar

--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -41,6 +41,18 @@
               <p>Dashboard</p>
             </a>
           </li>
+          {% url 'dashboard' as url %}
+          <li class="nav-item {% if request.path == url %}active{% endif %}">
+            <a
+              data-bs-toggle="collapse"
+              href="{{url}}"
+              class="collapsed"
+              aria-expanded="false"
+            >
+              <i class="fas fa-home"></i>
+              <p>Test</p>
+            </a>
+          </li>
           <!-- <li class="nav-item">
             <a data-bs-toggle="collapse" href="#base">
               <i class="fas fa-layer-group"></i>
