public_image property

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,26 @@
         {%include 'components/sidebar.html'%}
         <div class="main-panel">
             {%include 'components/topbar.html'%}
-            {%block content%}{%endblock%}   
+            <div class="container">
+                <div class="page-inner">
+                    <div
+                        class="d-flex align-items-left align-items-md-center flex-column flex-md-row pt-2 pb-4"
+                    >
+                    <div class="page-header">
+                        <h3 class="fw-bold mb-3">{%block page_name%}{%endblock%}</h3>
+                        <ul class="breadcrumbs mb-3">
+                          {%block aditional_content%}{%endblock%}
+                        </ul>
+                      </div>
+                        <div class="ms-md-auto py-2 py-md-0">
+                            {%block action%}{%endblock%}
+                        </div>
+                    </div>
+                    <div class="row">
+                        {%block content%}{%endblock%}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
@@ -79,4 +98,5 @@
         fillColor: "rgba(255, 165, 52, .14)",
     });
     </script>
+    {%block script%}{%endblock%}
 </html>
