--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -4,7 +4,7 @@
     <div class="sidebar-logo">
       <!-- Logo Header -->
       <div class="logo-header" data-background-color="dark">
-        <a href="{url 'dashboard'%}" class="logo">
+        <a href="{%url 'dashboard'%}" class="logo">
           <img
             src="{% static 'assets/img/kaiadmin/logo_light.svg' %}"
             alt="navbar brand"
