--- a/templates/base.html
+++ b/templates/base.html
@@ -16,12 +16,12 @@
                     <div
                         class="d-flex align-items-left align-items-md-center flex-column flex-md-row pt-2 pb-4"
                     >
-                    <div class="page-header">
-                        <h3 class="fw-bold mb-3">{%block page_name%}{%endblock%}</h3>
-                        <ul class="breadcrumbs mb-3">
-                          {%block aditional_content%}{%endblock%}
-                        </ul>
-                      </div>
+                        <div class="page-header">
+                            <h3 class="fw-bold mb-3">{%block page_name%}{%endblock%}</h3>
+                            <ul class="breadcrumbs mb-3">
+                            {%block additional_content%}{%endblock%}
+                            </ul>
+                        </div>
                         <div class="ms-md-auto py-2 py-md-0">
                             {%block action%}{%endblock%}
                         </div>
