--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -9,7 +9,7 @@ Profile
 {%endblock%}
 
 {%block action%}
-<a href="#" class="btn btn-label-info btn-round me-2">Changer Mot de passe</a>
+<a href="{%url 'change-password'%}" class="btn btn-label-info btn-round me-2">Changer Mot de passe</a>
 {%endblock%}
 
 {%block content%}
